syntax = "proto3";

package user;
option go_package ="proto/userpb";


service UserService {
    rpc GetUserInfo(UserRequest) returns (UserResponse);
  }

message UserRequest{
    string id = 1 ;
  }

message UserResponse{
    string id =1 ;
    string name = 2;
    string email = 3;
  }
